# ComfyUI-SAM2-Realtime

./: README.md  nodes.py  pyproject.toml  requirements.txt  setup.py
examples/: SAM2-Realtime-Example.json
sam2/: sam2_camera_predictor.py
sam2_configs/: sam2_hiera_small.yaml  sam2_hiera_t.yaml  sam2_hiera_tiny.yaml
sam2_realtime/: build_sam.py  pyproject.toml  sam2_tensor_predictor.py  sam2_tensorrt.py  sam2_tensorrt_predictor.py
sam2_realtime/modeling/: memory_attention.py  memory_encoder.py  sam2_base.py
sam2_realtime/modeling/backbones/: hieradet.py
sam2_realtime/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
sam2_realtime/utils/: misc.py  transforms.py
